[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/character_0000.png" type="Texture" id=2]
[ext_resource path="res://assets/player/character_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/footstep_grass_003.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/footstep_grass_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/footstep_grass_001.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/footstep_grass_000.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/footstep_grass_004.ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/Util/RandomAudioStreamPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sounds/footstep_concrete_003.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/footstep_concrete_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/footstep_concrete_000.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/footstep_concrete_001.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/footstep_concrete_002.ogg" type="AudioStream" id=14]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 baseColor : hint_color;

void fragment() {
	vec4 texColor = texture(TEXTURE, UV);
	COLOR.rgba = vec4(baseColor.r, baseColor.g, baseColor.b, texColor.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/baseColor = Color( 0.352941, 0.823529, 0.54902, 1 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.247159, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0
height = 8.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 1 )
dashHazardMask = 1073741824

[node name="FootstepAudioPlayer" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 7 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 4 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 8 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 12 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 13 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 14 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 10 )
volume_db = -2.0
bus = "Footsteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="FootstepAudioPlayer"]
stream = ExtResource( 11 )
volume_db = -2.0
bus = "Footsteps"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashParticles" type="Particles2D" parent="."]
visible = false
show_behind_parent = true
material = SubResource( 7 )
position = Vector2( 0, -12 )
emitting = false
amount = 15
lifetime = 0.4
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 2147483648
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 1342177280

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -10 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="DashArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
rotation = -1.57079
shape = SubResource( 5 )
disabled = true
